--- a/package.json
+++ b/package.json
@@ -21,5 +21,13 @@
   },
   "dependencies": {
     "storeux": "0.0.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/adrianjonmiller/engineux.git"
+  },
+  "bugs": {
+    "url": "https://github.com/adrianjonmiller/engineux/issues"
+  },
+  "homepage": "https://github.com/adrianjonmiller/engineux#readme"
 }
